--- a/_includes/sections/committee.html
+++ b/_includes/sections/committee.html
@@ -13,7 +13,19 @@
   {% else %}
     <div class="grid organizers committee-grid">
       {% for member in published_committee %}
-        <article>
+        {% assign profile_url = member.profile %}
+        {% if profile_url == nil or profile_url == "" %}
+          {% if member.links %}
+            {% if member.links.linkedin and member.links.linkedin != "" %}
+              {% assign profile_url = member.links.linkedin %}
+            {% elsif member.links.home and member.links.home != "" %}
+              {% assign profile_url = member.links.home %}
+            {% elsif member.links.scholar and member.links.scholar != "" %}
+              {% assign profile_url = member.links.scholar %}
+            {% endif %}
+          {% endif %}
+        {% endif %}
+        <article{% if profile_url and profile_url != "" %} class="profile-card" data-profile="{{ profile_url }}"{% endif %}>
           {% if member.photo and member.photo != "" %}
             <img class="avatar-photo" src="{{ member.photo | relative_url }}" alt="{{ member.name }}" />
           {% else %}
@@ -21,18 +33,6 @@
             {% assign first_initial = name_parts[0] | slice: 0, 1 %}
             {% assign last_initial = name_parts | last | slice: 0, 1 %}
             <div class="avatar">{{ first_initial }}{{ last_initial }}</div>
-          {% endif %}
-          {% assign profile_url = member.profile %}
-          {% if profile_url == nil or profile_url == "" %}
-            {% if member.links %}
-              {% if member.links.home and member.links.home != "" %}
-                {% assign profile_url = member.links.home %}
-              {% elsif member.links.scholar and member.links.scholar != "" %}
-                {% assign profile_url = member.links.scholar %}
-              {% elsif member.links.linkedin and member.links.linkedin != "" %}
-                {% assign profile_url = member.links.linkedin %}
-              {% endif %}
-            {% endif %}
           {% endif %}
           {% if profile_url and profile_url != "" %}
             <h3><a class="profile-link" href="{{ profile_url }}" target="_blank" rel="noopener">{{ member.name }}</a></h3>
