--- a/_includes/sections/organizers.html
+++ b/_includes/sections/organizers.html
@@ -5,7 +5,19 @@
   </div>
   <div class="grid organizers">
     {% for organizer in site.data.organizers %}
-      <article>
+      {% assign profile_url = organizer.profile %}
+      {% if profile_url == nil or profile_url == "" %}
+        {% if organizer.links %}
+          {% if organizer.links.home and organizer.links.home != "" %}
+            {% assign profile_url = organizer.links.home %}
+          {% elsif organizer.links.scholar and organizer.links.scholar != "" %}
+            {% assign profile_url = organizer.links.scholar %}
+          {% elsif organizer.links.linkedin and organizer.links.linkedin != "" %}
+            {% assign profile_url = organizer.links.linkedin %}
+          {% endif %}
+        {% endif %}
+      {% endif %}
+      <article{% if profile_url and profile_url != "" %} class="profile-card" data-profile="{{ profile_url }}"{% endif %}>
         {% if organizer.photo and organizer.photo != "" %}
           <img class="avatar-photo" src="{{ organizer.photo | relative_url }}" alt="{{ organizer.name }}" />
         {% else %}
@@ -13,18 +25,6 @@
           {% assign first_initial = name_parts[0] | slice: 0, 1 %}
           {% assign last_initial = name_parts | last | slice: 0, 1 %}
           <div class="avatar">{{ first_initial }}{{ last_initial }}</div>
-        {% endif %}
-        {% assign profile_url = organizer.profile %}
-        {% if profile_url == nil or profile_url == "" %}
-          {% if organizer.links %}
-            {% if organizer.links.home and organizer.links.home != "" %}
-              {% assign profile_url = organizer.links.home %}
-            {% elsif organizer.links.scholar and organizer.links.scholar != "" %}
-              {% assign profile_url = organizer.links.scholar %}
-            {% elsif organizer.links.linkedin and organizer.links.linkedin != "" %}
-              {% assign profile_url = organizer.links.linkedin %}
-            {% endif %}
-          {% endif %}
         {% endif %}
         {% if profile_url and profile_url != "" %}
           <h3><a class="profile-link" href="{{ profile_url }}" target="_blank" rel="noopener">{{ organizer.name }}</a></h3>
