--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
         "offers": {
           "@type": "Offer",
           "url": "https://cvpr.thecvf.com/Conferences/2026",
+          "validFrom": "{{ site.data.site.seo.event_start }}",
           "availability": "https://schema.org/InStock",
           "price": "0",
           "priceCurrency": "USD",
